Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103513

A11Y: Flickable child item focus frame position not updated

XMLWordPrintable

    • Android

      When using two fingers to scroll a QML Flickable when the screen reader is enabled, the position of the a11y focus frame is not updated and doesn't move with the item.

      Seems like that the necessary event added to the QQuickItem here https://codereview.qt-project.org/c/qt/qtdeclarative/+/323739 isn't emitted for any child of the Flickable, which would be necessary to move the focus frame.

      Similarly events like onYChanged are also never fired, however, not sure if they are supposed to in this case.

      Here is a minimal example to reproduce it:

      Window {
          title: qsTr("Hello World")
          width: 640
          height: 480
          visible: true
      
          Flickable {
              id: flickable
              anchors.fill: parent
      
              contentWidth: contentItem.childrenRect.width
              contentHeight: contentItem.childrenRect.height
      
              Text {
                  id: a
      
                  Accessible.name: "A"
      
                  onYChanged: console.log("Should this work?" + y)
      
                  width: flickable.width
                  height: 300
      
                  text: "A"
              }
      
              Text {
                  id: b
      
                  Accessible.name: "B"
      
                  anchors.top: a.bottom
                  width: flickable.width
                  height: 300
      
                  text: "B"
              }
      
              Text {
                  id: c
      
                  Accessible.name: "C"
      
                  anchors.top: b.bottom
                  width: flickable.width
                  height: 600
      
                  text: "C"
              }
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            mike.achtelik Mike Achtelik
            Votes:
            4 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated: