A11Y: Send Scrolling Events when Flickable moves

Task-number: QTBUG-103513
Change-Id: I6b67ff2611f37a6519420d875e7d9a70d0eb210a
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
(cherry picked from commit ac0d923de68cad62d87e116fbb5e5cc2af28349c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>